--- a/README
+++ b/README
@@ -2,3 +2,4 @@ This will be the git repository for my computer science class at dvc,
 cs 165 during spring 2012. Anyone on here copying my homework, probably
 doesn't need to copy it if they use git, and if they do, I probably will
 have proof that this was here first...
+Lets see these folders work!
